Refactored footer component and fixed navbar overlaping with div present below

--- a/wanderersway/src/NavigationBar/NavigationBarHeader.css
+++ b/wanderersway/src/NavigationBar/NavigationBarHeader.css
@@ -7,4 +7,7 @@
     position: fixed;
     z-index: 2;
     width:100vw;
+    margin-top: 0px;
+    padding:0px;
+    top:0px;
 }
